--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+
+.current-path {
+  color: #CB5E1C !important;
+  font-weight: 500;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-profile {
+  padding-left: 50px !important;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.current-path-li {
+  border-bottom: 1px solid #CB5E1C;
+}
+.header-app{
+  margin: 0 !important;
+}
+.img-profile {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 2px solid gray;
+  margin-right: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ul-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 0;
+  margin-top: 30px;
+}
+
+li {
+  list-style-type: none;
+  padding-bottom: 10px;
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none !important;
+  color: rgb(99, 98, 98) !important;
+}
+
+.logout {
+  margin-left: 20px;
+  color: #CB5E1C;
+  border: 1px solid #CB5E1C;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.icon-guest {
+  font-size: 30px;
+  margin-right: 15px !important;
+
+}
+
+.guest-head {
+  color: rgb(99, 98, 98);
+  display: flex;
+  align-items: center;
 }
