--- a/src/Component/ViewSurvey/style.css
+++ b/src/Component/ViewSurvey/style.css
@@ -3,10 +3,9 @@
 }
 
 .view-survey-header {
-    width: 70%;
-    margin: auto;
+    width: 90%;
     background-color: white;
-    margin: 30px auto;
+    margin: 20px;
     border: 1px solid #b4afaf;
     border-radius: 9px 9px 0 0;
     padding: 20px;
@@ -16,6 +15,17 @@
     font-size: 30px;
     font-weight: 600;
     padding-bottom: 20px;
+    color: #CB5E1C;
+}
+
+.btn-save {
+    padding: 5px 15px;
+    background-color: #CB5E1C;
+    border: 1px solid gray;
+    border-radius: 5px;
+    font-size: 18px;
+    color: #f8f9fa;
+    font-weight: 500;
 }
 
 .survey-sub-title {
@@ -31,41 +41,144 @@
 
 .view-survey-questions {
     background-color: white;
-    width: 70%;
-    margin: 20px auto;
-    border: 1px solid #bab8b8;
+    width: 90%;
+    margin: 20px;
+    border: 1px solid #CB5E1C;
     border-radius: 10px 10px 0 0;
     padding: 20px;
 }
-.q-div{
+
+.q-div {
     margin: 10px;
-    text-align: left;   
+    text-align: left;
 }
-.multi-que{
+
+.multi-que {
     display: flex;
     flex-direction: column;
 }
-.question-title{
-font-size: 20px;
+
+.question-title {
+    font-size: 20px;
 }
+
 .form-check-input[type=checkbox] {
     width: 20px;
     height: 20px;
     margin-right: 20px;
     margin-left: 20px;
 }
+
 .form-check-input[type=radio] {
     width: 20px;
     height: 20px;
     margin-right: 20px;
     margin-left: 20px;
 }
-.form-check-input:checked{
-    background-color: #8e9093 !important;
-    border-color:  #8e9093 !important;
+
+input[type=range] {
+    margin: 20px auto;
+    width: 80%;
+    text-align: center;
+    display: flex;
 }
-.multi-item{
+
+.form-check-input:checked {
+    background-color: #8e9093 !important;
+    border-color: #8e9093 !important;
+}
+
+.multi-item {
     display: flex;
     margin: 10px 0;
 
+}
+
+.share-icon {
+    font-size: 22px;
+    color: #CB5E1C;
+    cursor: pointer;
+}
+
+.div-head {
+    margin: 20px 37px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.all-public-surveys {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.survey-name-item {
+    cursor: pointer;
+    border: 1px solid #CB5E1C;
+    padding: 3px 10px;
+    border-radius: 5px;
+    color: #CB5E1C;
+    margin-bottom: 10px;
+}
+.css-187mznn-MuiSlider-root{
+    color: #8e9093 !important;
+}
+.radio-check{
+    margin: 10px 0;
+}
+.thank{
+    display: flex;
+    align-content: center;
+    align-items: center;
+    font-size: 24px;
+}
+.logo-img1 {
+    height: 200px;
+    width: 200px;
+    margin: 10px auto 30px auto;
+    border-radius: 20px;
+}
+.normal-input{
+    margin-top: 15px;
+    width: 90%;
+}
+.rating-values{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: auto;
+    top: -20px;
+    color: #CB5E1C;
+}
+.no-selected-div{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 100px auto;
+}
+.icon-no{
+    font-size: 90px;
+}
+.no-selected-content{
+    font-size: 30px;
+    text-align: center;
+    margin: 50px;
+    width: 40%;
+    color: grey;
+}
+.link-share {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid #CB5E1C;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.personal {
+    margin: 20px 0;
+    font-size: 22px;
+    font-weight: 500;
 }
