--- a/src/Component/Statistic/style.css
+++ b/src/Component/Statistic/style.css
@@ -8,22 +8,50 @@
 
 .item-survey-statistic {
     color: #CB5E1C;
-    padding: 7px;
+    padding: 5px 7px;
     font-size: 18px;
     cursor: pointer;
+    border: 1px solid;
+    margin: 10px 0;
+    border-radius: 5px;
 }
 
 .generalContainer {
     width: 75%;
-    background-color: rgb(243, 243, 243);
+}
+
+.div-vv {
+    color: #CB5E1C;
+    width: 90%;
+    margin: 20px auto;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.message-cl {
+    font-size: 35px;
+    text-align: center;
+    color: #6c757d;
+    margin: 200px auto;
+}
+.ComboChart{
+    font-size: 50px;
+}
+
+.div-xx {
+    color: #505050;
 }
 
 .div-all-survey-statistic {
     width: 25%;
+    margin-top: 20px;
+    font-size: 24px;
+    font-weight: 500;
+    color: #909090;
 }
 
 .statistic-main {
     display: flex;
     margin-top: 20px;
-    
+    /* border-top: 1px solid #8b8a8a; */
 }
